# calapi

./: Cargo.toml
public/: index.html
src/: main.rs  time_slot_desc.rs
src/api/: mod.rs  my_booking.rs  utils.rs
