[package]
name = "calapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
chrono = "0.4.26"
ics = "0.5.8"
reqwest = { version = "0.11.18", features = ["json"] }
serde = "1.0.185"
serde_derive = "1.0.185"
serde_json = "1.0.105"
